[gd_scene load_steps=17 format=2]

[ext_resource path="res://game/player/hurt.wav" type="AudioStream" id=1]
[ext_resource path="res://game/player/Player.gd" type="Script" id=2]
[ext_resource path="res://lib/ShapePolygon2D.gd" type="Script" id=3]
[ext_resource path="res://game/player/WispAnimation.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/player/PlayerHurtbox.gd" type="Script" id=5]
[ext_resource path="res://game/player/shoot.wav" type="AudioStream" id=6]
[ext_resource path="res://materials/maskable.gdshader" type="Shader" id=7]
[ext_resource path="res://game/player/healing_particles_process_material.tres" type="Material" id=8]
[ext_resource path="res://game/player/healing-particle.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 20.025

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/mask_color = Color( 0.956863, 0.956863, 0.956863, 1 )
shader_param/masked = false

[sub_resource type="CircleShape2D" id=4]
radius = 19.0

[sub_resource type="CircleShape2D" id=5]
radius = 23.0868

[sub_resource type="Animation" id=8]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("WispAnimation:material:shader_param/masked")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("WispAnimation:material:shader_param/masked")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 1, 1 )
collision_mask = 17
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="RingTexture" type="Polygon2D" parent="."]
visible = false
color = Color( 0.0823529, 0.627451, 0.270588, 1 )
antialiased = true
polygon = PoolVector2Array( 20, 0, 18.4776, 7.65367, 14.1421, 14.1421, 7.65367, 18.4776, 1.22461e-15, 20, -7.65367, 18.4776, -14.1421, 14.1421, -18.4776, 7.65367, -20, 2.44921e-15, -18.4776, -7.65367, -14.1421, -14.1421, -7.65367, -18.4776, -3.67382e-15, -20, 7.65367, -18.4776, 14.1421, -14.1421, 18.4776, -7.65367, 20, 0 )
script = ExtResource( 3 )
shape = SubResource( 2 )

[node name="CoreTexture" type="Polygon2D" parent="."]
visible = false
scale = Vector2( 0.8, 0.8 )
color = Color( 0.372549, 0.372549, 0.372549, 1 )
antialiased = true
polygon = PoolVector2Array( 20, 0, 18.4776, 7.65367, 14.1421, 14.1421, 7.65367, 18.4776, 1.22461e-15, 20, -7.65367, 18.4776, -14.1421, 14.1421, -18.4776, 7.65367, -20, 2.44921e-15, -18.4776, -7.65367, -14.1421, -14.1421, -7.65367, -18.4776, -3.67382e-15, -20, 7.65367, -18.4776, 14.1421, -14.1421, 18.4776, -7.65367, 20, 0 )
script = ExtResource( 3 )
shape = SubResource( 2 )

[node name="WispAnimation" parent="." instance=ExtResource( 4 )]
material = SubResource( 7 )
z_index = 100
frame = 12
playing = false

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 8
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
modulate = Color( 0.964706, 0.054902, 0.054902, 1 )
shape = SubResource( 4 )

[node name="SpawnerDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerDetector"]
shape = SubResource( 5 )

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 8 )
anims/RESET = SubResource( 9 )

[node name="Particles2D" type="Particles2D" parent="."]
z_index = 200
emitting = false
amount = 30
one_shot = true
process_material = ExtResource( 8 )
texture = ExtResource( 9 )

[connection signal="area_entered" from="SpawnerDetector" to="." method="_on_spawner_detected_entered"]
[connection signal="area_exited" from="SpawnerDetector" to="." method="_on_SpawnerDetector_area_exited"]
